--- a/src/components/dashboard-components/Overview.css
+++ b/src/components/dashboard-components/Overview.css
@@ -5,7 +5,7 @@
   gap: 20px;
 }
 
-.card {
+.small-card {
   background-color: #fff;
   border-radius: 10px;
   /* box-shadow: 0px 1px 2px rgba(0, 0, 0, 11%); */
@@ -19,7 +19,7 @@
   gap: 20px;
 }
 
-.top .card {
+.top .small-card {
   flex: 1;
   display: flex;
   flex-direction: row;
@@ -46,7 +46,7 @@
     }
 }
 
-.top .card:nth-of-type(1) {
+.top .small-card:nth-of-type(1) {
   .icon {
     background: var(--primary-light);
     min-height: 3.2rem;
@@ -64,7 +64,7 @@
   }
 }
 
-.top .card:nth-of-type(2) {
+.top .small-card:nth-of-type(2) {
   .icon {
     background: var(--second-section-light);
     min-height: 3.2rem;
@@ -81,7 +81,7 @@
   }
 }
 
-.top .card:nth-of-type(3) {
+.top .small-card:nth-of-type(3) {
   .icon {
     background: var(--third-section-light);
     min-height: 3.2rem;
@@ -98,7 +98,7 @@
   }
 }
 
-.top .card:nth-of-type(4) {
+.top .small-card:nth-of-type(4) {
   .icon {
     background: var(--fourth-section-light);
     min-height: 3.2rem;
@@ -115,7 +115,7 @@
   }
 }
 
-.card .right {
+.small-card .right {
   display: flex;
   flex-direction: column;
   gap: 6px;
