--- a/src/components/dashboard-components/CommonStyles.css
+++ b/src/components/dashboard-components/CommonStyles.css
@@ -60,6 +60,9 @@
 .css-1agg2cp-MuiResponsiveChart-container {
   width: 100% !important;
 }
+.css-10z5nq2 {
+  width: 100% !important;
+}
 
 .css-1j74uew-MuiPaper-root-MuiCard-root{
   min-width: fit-content;
