--- a/src/components/dashboard-components/CommonStyles.css
+++ b/src/components/dashboard-components/CommonStyles.css
@@ -47,6 +47,61 @@
   gap: 15px;
   width: 100%;
 }
+.card-body.carousel-layout {
+  display: flex;
+  gap: 10px;
+  flex-direction: row;
+  align-items: flex-start;
+  overflow-x: auto;
+  width: 100%;
+  max-width: 72vw;
+}
+
+.employees-cards {
+  display: flex;
+  gap: 10px;
+  flex-direction: row;
+  align-items: flex-start;
+  width: 100%;
+}
+.employees-cards .employee-card {
+  width: 100%;
+  padding: 15px;
+  border-radius: 10px;
+  background-color: #fff;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 11%);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  max-width: 250px;
+
+  img {
+    width: 45px;
+    height: 45px;
+    object-fit: cover;
+    border-radius: 50%;
+    object-position: center;
+  }
+  h4 {
+    font-size: 16px;
+    font-weight: 500;
+  }
+  .row {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    font-size: 13px;
+
+    &:nth-of-type(2) {
+      color: var(--text-light2);
+    }
+    svg {
+      color: var(--color-primary);
+      font-size: 14px;
+    }
+  }
+
+}
 
 .card-body .over {
   display: flex;
